--- a/Code/symmetries_Glucose_Insulin_signalling.ipynb
+++ b/Code/symmetries_Glucose_Insulin_signalling.ipynb
@@ -11,7 +11,7 @@
     "We consider the following model of glucose signalling:\n",
     "\\begin{equation}\n",
     "\\begin{split}\n",
-    "\\dot{q_{1}}&=u-p_{1}q_{1}-p_{2}g_{2}\\,,\\\\\n",
+    "\\dot{q_{1}}&=u(t)-p_{1}q_{1}-p_{2}g_{2}\\,,\\\\\n",
     "\\dot{q_{2}}&=p_{3}q_{1}+p_{4}q_{2}\\,.\\\\\n",
     "\\end{split}\n",
     "\\label{eq:glucose_system}\n",
@@ -23,7 +23,7 @@
     "\\end{equation}\n",
     "which means that we observe a fraction of the glucose in the blood. In [1] they find some Lie symmetries of this sytem using an ansatz based approach. In this work, we will try to find these Lie symmetries without resorting to any ansatze. Since this is a system of two first order ODE, this implies that the symmetry group is infinite. To this end, we re-write this system as a single second order ODE. First, we can multiply the first ODE in the above equation by $1/V_{p}$ in order to replace the state $q_{1}$ by $y$. Then, we can re-write the entire system as a single second order ODE which yields the following equation:\n",
     "\\begin{equation}\n",
-    "\\ddot{y}=\\phi\\left(\\theta,y,\\dot{y}\\right)=(p_{1}-p_{3})\\dot{y}+(p_{1}p_{3}-p_{4}V_{p})y+\\left(\\frac{p_{3}}{V_{p}}\\right)u\\,.\n",
+    "\\ddot{y}=\\phi\\left(\\theta,y,\\dot{y}\\right)=(p_{1}-p_{3})\\dot{y}+(p_{1}p_{3}-p_{4}V_{p})y+\\left(\\frac{1}{V_{p}}\\right)(p_{3}u+\\dot{u})\\,.\n",
     "\\label{eq:glucose_second}\n",
     "\\end{equation}\n",
     "We are interested in the symmetries of this second order ODE as the symmetry group is finite. Specifically, we are interested in a symmetry:\n",
@@ -49,7 +49,7 @@
     "    \\end{align}\n",
     "Then, the linearised symmetry condition is given by:\n",
     "\\begin{equation}\n",
-    "\\eta^{(2)}=(p_{1}-p_{3})\\eta^{(1)}+(p_{1}p_{3}-p_{4}V_{p})\\eta+\\sum_{i=1}^{4}\\left(\\frac{\\partial\\phi_{i}}{\\partial p_{i}}\\right)\\chi_{i}+\\left(\\frac{\\partial\\phi}{\\partial V_{p}}\\right)\\chi_{V_{p}}=0\\,\\mathrm{whenever}\\quad\\ddot{y}=\\phi\\left(\\theta,y,\\dot{y}\\right)=(p_{1}-p_{3})\\dot{y}+(p_{1}p_{3}-p_{4}V_{p})y+\\left(\\frac{p_{3}}{V_{p}}\\right)u\\,.\n",
+    "\\eta^{(2)}=(p_{1}-p_{3})\\eta^{(1)}+(p_{1}p_{3}-p_{4}V_{p})\\eta+\\sum_{i=1}^{4}\\left(\\frac{\\partial\\phi_{i}}{\\partial p_{i}}\\right)\\chi_{i}+\\left(\\frac{\\partial\\phi}{\\partial V_{p}}\\right)\\chi_{V_{p}}=0\\,\\mathrm{whenever}\\quad\\ddot{y}=\\phi\\left(\\theta,y,\\dot{y}\\right)=(p_{1}-p_{3})\\dot{y}+(p_{1}p_{3}-p_{4}V_{p})y+\\left(\\frac{1}{V_{p}}\\right)(p_{3}u+\\dot{u})\\,.\n",
     "\\label{eq:lin_sym_glucose}\n",
     "\\end{equation}\n",
     "This will decompose into a set of determining equations stemming from the different powers of $\\dot{q}$ which gives us a system of equations that we can hopefully solve. Now, it's quite time consuming to do all these tasks by hand, so let's try to let SymPy do it instead! \n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "f8d77235",
    "metadata": {},
    "outputs": [],
@@ -73,12 +73,40 @@
     "# Define our derivatives wrt to time as arbitrary symbols as well\n",
     "yt, ytt = symbols('yt ytt')\n",
     "# Define our arbitrary parameters\n",
-    "p1, p2, p3, p4, Vp, u = symbols('p1, p2, p3, p4, Vp, u')\n"
+    "p1, p2, p3, p4, Vp, u, udot = symbols('p1, p2, p3, p4, Vp, u udot')\n",
+    "# Define our ODE\n",
+    "ybis = (p1-p3)*yt + (p1*p3-p4*Vp)*y+((1/Vp)*(p3*u+udot))\n",
+    "# Define our unknown infinitesimals with respect to the independent and dependent variables\n",
+    "xi = Function('xi')(t,y,p1,p2,p3,p4,Vp)\n",
+    "eta = Function('eta')(t,y,p1,p2,p3,p4,Vp)\n",
+    "# Calculate all derivatives up to order two\n",
+    "# First order derivatives\n",
+    "xi_t = Derivative(xi,t,1).doit()\n",
+    "xi_y = Derivative(xi,y,1).doit()\n",
+    "#eta_z = Derivative(eta,z,1).doit()\n",
+    "#eta_u = Derivative(eta,u,1).doit()\n",
+    "# Second order derivatives\n",
+    "#xi_zu = Derivative(xi_z,u,1).doit()\n",
+    "#xi_zz = Derivative(xi_z,z,1).doit()\n",
+    "#xi_uu = Derivative(xi_u,u,1).doit()\n",
+    "#eta_zu = Derivative(eta_z,u,1).doit()\n",
+    "#eta_zz = Derivative(eta_z,z,1).doit()\n",
+    "#eta_uu = Derivative(eta_u,u,1).doit()\n",
+    "# Define the prolonged infinitesimals\n",
+    "#eta_1 = eta_z + (eta_u-xi_z)*uz - xi_u*(uz**2)\n",
+    "# Define the second prolongation\n",
+    "#eta_2 = eta_zz + (2*eta_zu-xi_zz)*uz + (eta_uu - 2*xi_zu)*(uz**2) - xi_uu * (uz**3) + (eta_u - 2*xi_z - 3*xi_u*uz)*uzz\n",
+    "# Define our unknown infinitesimals with respect to all of the parameters\n",
+    "chi_p1 = Function('chi_p1')(p1,p2,p3,p4,Vp)\n",
+    "chi_p2 = Function('chi_p2')(p1,p2,p3,p4,Vp)\n",
+    "chi_p3 = Function('chi_p3')(p1,p2,p3,p4,Vp)\n",
+    "chi_p4 = Function('chi_p4')(p1,p2,p3,p4,Vp)\n",
+    "chi_Vp = Function('chi_Vp')(p1,p2,p3,p4,Vp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "62a6884d",
    "metadata": {},
    "outputs": [],
