--- a/Code/symmetries_Glucose_Insulin_signalling.ipynb
+++ b/Code/symmetries_Glucose_Insulin_signalling.ipynb
@@ -61,10 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f8d77235",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The linearised symmetry condition is given by:\n",
+      "\\begin{equation}\n",
+      "3 V_{p}^{3} p_{4} y \\dot{y} \\frac{\\partial}{\\partial y} \\xi - V_{p}^{3} p_{4} y \\frac{\\partial}{\\partial y} \\eta + 2 V_{p}^{3} p_{4} y \\frac{\\partial}{\\partial t} \\xi - V_{p}^{3} p_{4} \\eta - V_{p}^{3} y \\chi_{p_{4}} - 3 V_{p}^{2} p_{1} p_{3} y \\dot{y} \\frac{\\partial}{\\partial y} \\xi + V_{p}^{2} p_{1} p_{3} y \\frac{\\partial}{\\partial y} \\eta - 2 V_{p}^{2} p_{1} p_{3} y \\frac{\\partial}{\\partial t} \\xi + V_{p}^{2} p_{1} p_{3} \\eta + V_{p}^{2} p_{1} y \\chi_{p_{3}} - 2 V_{p}^{2} p_{1} \\dot{y}^{2} \\frac{\\partial}{\\partial y} \\xi - V_{p}^{2} p_{1} \\dot{y} \\frac{\\partial}{\\partial t} \\xi - V_{p}^{2} p_{1} \\frac{\\partial}{\\partial t} \\eta + V_{p}^{2} p_{3} y \\chi_{p_{1}} + 2 V_{p}^{2} p_{3} \\dot{y}^{2} \\frac{\\partial}{\\partial y} \\xi + V_{p}^{2} p_{3} \\dot{y} \\frac{\\partial}{\\partial t} \\xi + V_{p}^{2} p_{3} \\frac{\\partial}{\\partial t} \\eta - V_{p}^{2} p_{4} y \\chi_{V_{p}} - V_{p}^{2} \\dot{y}^{3} \\frac{\\partial^{2}}{\\partial y^{2}} \\xi + V_{p}^{2} \\dot{y}^{2} \\frac{\\partial^{2}}{\\partial y^{2}} \\eta - 2 V_{p}^{2} \\dot{y}^{2} \\frac{\\partial^{2}}{\\partial y\\partial t} \\xi + V_{p}^{2} \\dot{y} \\chi_{p_{1}} - V_{p}^{2} \\dot{y} \\chi_{p_{3}} + 2 V_{p}^{2} \\dot{y} \\frac{\\partial^{2}}{\\partial y^{2}} \\eta - V_{p}^{2} \\dot{y} \\frac{\\partial^{2}}{\\partial t^{2}} \\xi + V_{p}^{2} \\frac{\\partial^{2}}{\\partial t^{2}} \\eta - 3 V_{p} p_{3} u \\dot{y} \\frac{\\partial}{\\partial y} \\xi + V_{p} p_{3} u \\frac{\\partial}{\\partial y} \\eta - 2 V_{p} p_{3} u \\frac{\\partial}{\\partial t} \\xi + V_{p} p_{3} u + V_{p} u \\chi_{p_{3}} - 3 V_{p} \\dot{u} \\dot{y} \\frac{\\partial}{\\partial y} \\xi + V_{p} \\dot{u} \\frac{\\partial}{\\partial y} \\eta - 2 V_{p} \\dot{u} \\frac{\\partial}{\\partial t} \\xi + V_{p} \\dot{u} - p_{3} u \\chi_{V_{p}} - \\dot{u} \\chi_{V_{p}} = 0\\,.\\label{eq:lin_sym}\n",
+      "\\end{equation}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Load SymPy\n",
     "from sympy import *\n",
@@ -138,10 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "06b59bc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The determining equations are:\n",
+      "\\begin{align}\n",
+      "\\dot{y}^{3}:&- V_{p}^{2} \\frac{\\partial^{2}}{\\partial y^{2}} \\xi&=0\\,,\\label{eq:d_1}\\\\\n",
+      "\\dot{y}^{2}:&- 2 V_{p}^{2} p_{1} \\frac{\\partial}{\\partial y} \\xi + 2 V_{p}^{2} p_{3} \\frac{\\partial}{\\partial y} \\xi + V_{p}^{2} \\frac{\\partial^{2}}{\\partial y^{2}} \\eta - 2 V_{p}^{2} \\frac{\\partial^{2}}{\\partial y\\partial t} \\xi&=0\\,,\\label{eq:d_2}\\\\\n",
+      "\\dot{y}:&3 V_{p}^{3} p_{4} y \\frac{\\partial}{\\partial y} \\xi - 3 V_{p}^{2} p_{1} p_{3} y \\frac{\\partial}{\\partial y} \\xi - V_{p}^{2} p_{1} \\frac{\\partial}{\\partial t} \\xi + V_{p}^{2} p_{3} \\frac{\\partial}{\\partial t} \\xi + V_{p}^{2} \\chi_{p_{1}} - V_{p}^{2} \\chi_{p_{3}} + 2 V_{p}^{2} \\frac{\\partial^{2}}{\\partial y^{2}} \\eta - V_{p}^{2} \\frac{\\partial^{2}}{\\partial t^{2}} \\xi - 3 V_{p} p_{3} u \\frac{\\partial}{\\partial y} \\xi - 3 V_{p} \\dot{u} \\frac{\\partial}{\\partial y} \\xi&=0\\,,\\label{eq:d_3}\\\\\n",
+      "1:&- V_{p}^{3} p_{4} y \\frac{\\partial}{\\partial y} \\eta + 2 V_{p}^{3} p_{4} y \\frac{\\partial}{\\partial t} \\xi - V_{p}^{3} p_{4} \\eta - V_{p}^{3} y \\chi_{p_{4}} + V_{p}^{2} p_{1} p_{3} y \\frac{\\partial}{\\partial y} \\eta - 2 V_{p}^{2} p_{1} p_{3} y \\frac{\\partial}{\\partial t} \\xi + V_{p}^{2} p_{1} p_{3} \\eta + V_{p}^{2} p_{1} y \\chi_{p_{3}} - V_{p}^{2} p_{1} \\frac{\\partial}{\\partial t} \\eta + V_{p}^{2} p_{3} y \\chi_{p_{1}} + V_{p}^{2} p_{3} \\frac{\\partial}{\\partial t} \\eta - V_{p}^{2} p_{4} y \\chi_{V_{p}} + V_{p}^{2} \\frac{\\partial^{2}}{\\partial t^{2}} \\eta + V_{p} p_{3} u \\frac{\\partial}{\\partial y} \\eta - 2 V_{p} p_{3} u \\frac{\\partial}{\\partial t} \\xi + V_{p} p_{3} u + V_{p} u \\chi_{p_{3}} + V_{p} \\dot{u} \\frac{\\partial}{\\partial y} \\eta - 2 V_{p} \\dot{u} \\frac{\\partial}{\\partial t} \\xi + V_{p} \\dot{u} - p_{3} u \\chi_{V_{p}} - \\dot{u} \\chi_{V_{p}}&=0\\,.\\label{eq:d_4}\\\\\n",
+      "\\end{align}\n",
+      "\\begin{equation}\n",
+      "- V_{p}^{2} \\frac{\\partial^{2}}{\\partial y^{2}} \\xi{\\left(t,y,p_{1},p_{2},p_{3},p_{4},V_{p} \\right)} = 0\\,.\\label{eq:d1}\n",
+      "\\end{equation}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Define our monomials\n",
     "monomials = [yt**3,yt**2,yt,1]\n",
@@ -201,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "76e04023",
    "metadata": {},
    "outputs": [],
@@ -224,10 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b2953759",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The second determining equation is given by:\n",
+      "\\begin{equation}\n",
+      "- 2 p_{1} A{\\left(t \\right)} + 2 p_{3} A{\\left(t \\right)} - 2 \\frac{d}{d t} A{\\left(t \\right)} + \\frac{\\partial^{2}}{\\partial y^{2}} \\eta{\\left(t,y,p_{1},p_{2},p_{3},p_{4},Vp \\right)} = 0\\,.\\label{eq:d2}\n",
+      "\\end{equation}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract the second determining equation\n",
     "d2 = simplify(det_eq[1][1].subs(xi,xi_sol).doit()*(1/Vp**2))\n",
@@ -256,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "53b6371b",
    "metadata": {},
    "outputs": [],
@@ -265,12 +307,12 @@
     "C = Function('C')(t)\n",
     "D = Function('D')(t)\n",
     "# Allocate our solution\n",
-    "eta_sol = (Derivative(A,t,1).doit()+(p1-p3)*A)*(y**2)+C*y+D"
+    "eta_sol = ((Derivative(A,t,1).doit()+(p1-p3)*A)*(y**2))+C*y+D"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ac40af80",
+   "id": "4e272c7e",
    "metadata": {},
    "source": [
     "All in all, this means that we have the following two infinitesimals:\n",
@@ -284,23 +326,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81a8c4f0",
+   "execution_count": 13,
+   "id": "ce191e5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The third determining equation is given by:\n",
+      "\\begin{equation}\n",
+      "3 V_{p}^{2} p_{4} y A{\\left(t \\right)} - 3 V_{p} p_{1} p_{3} y A{\\left(t \\right)} - V_{p} p_{1} y \\frac{d}{d t} A{\\left(t \\right)} + 4 V_{p} p_{1} A{\\left(t \\right)} - V_{p} p_{1} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} p_{3} y \\frac{d}{d t} A{\\left(t \\right)} - 4 V_{p} p_{3} A{\\left(t \\right)} + V_{p} p_{3} \\frac{d}{d t} B{\\left(t \\right)} - V_{p} y \\frac{d^{2}}{d t^{2}} A{\\left(t \\right)} + V_{p} \\chi_{p_{1}} - V_{p} \\chi_{p_{3}} + 4 V_{p} \\frac{d}{d t} A{\\left(t \\right)} - V_{p} \\frac{d^{2}}{d t^{2}} B{\\left(t \\right)} - 3 p_{3} u A{\\left(t \\right)} - 3 \\dot{u} A{\\left(t \\right)} = 0\\,.\\label{eq:d3}\n",
+      "\\end{equation}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract the second determining equation\n",
-    "d3 = simplify(det_eq[2][1].subs(xi,xi_sol).subs(eta,eta_sol).doit())\n",
+    "d3 = expand(simplify(det_eq[2][1].subs(xi,xi_sol).subs(eta,eta_sol).doit()*(1/Vp)))\n",
     "# Print this in a lovely LaTex string \n",
-    "d3_string = latex(Eq(d3,0),mode='equation').replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:d4}\\n\\\\end{equation}\\n\")\n",
-    "print(\"The second determining equation is given by:\")\n",
+    "d3_string = latex(Eq(d3,0),mode='equation').replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:d3}\\n\\\\end{equation}\\n\").replace(\"{\\\\left(p_{1},p_{2},p_{3},p_{4},Vp \\\\right)}\",\"\").replace(\"Vp\",\"V_{p}\").replace(\"p1\",\"p_{1}\").replace(\"p3\",\"p_{3}\")\n",
+    "print(\"The third determining equation is given by:\")\n",
     "print(d3_string)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d89baea4",
+   "id": "d1e17488",
    "metadata": {},
+   "source": [
+    "The third determining equation is given by:\n",
+    "\\begin{equation}\n",
+    "3 V_{p}^{2} p_{4} y A{\\left(t \\right)} - 3 V_{p} p_{1} p_{3} y A{\\left(t \\right)} - V_{p} p_{1} y \\frac{d}{d t} A{\\left(t \\right)} + 4 V_{p} p_{1} A{\\left(t \\right)} - V_{p} p_{1} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} p_{3} y \\frac{d}{d t} A{\\left(t \\right)} - 4 V_{p} p_{3} A{\\left(t \\right)} + V_{p} p_{3} \\frac{d}{d t} B{\\left(t \\right)} - V_{p} y \\frac{d^{2}}{d t^{2}} A{\\left(t \\right)} + V_{p} \\chi_{p_{1}} - V_{p} \\chi_{p_{3}} + 4 V_{p} \\frac{d}{d t} A{\\left(t \\right)} - V_{p} \\frac{d^{2}}{d t^{2}} B{\\left(t \\right)} - 3 p_{3} u A{\\left(t \\right)} - 3 \\dot{u} A{\\left(t \\right)} = 0\\,.\\label{eq:d3}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "Let's split this equation up with respect to the monomials $\\{1,y\\}$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "01cd8a97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sub equations stemming from the third determining equation are:\n",
+      "\\begin{align}\n",
+      "y:&3 V_{p} p_{4} A{\\left(t \\right)} - 3 p_{1} p_{3} A{\\left(t \\right)} - p_{1} \\frac{d}{d t} A{\\left(t \\right)} + p_{3} \\frac{d}{d t} A{\\left(t \\right)} - \\frac{d^{2}}{d t^{2}} A{\\left(t \\right)}&=0\\,,\\label{eq:d3_1}\\\\\n",
+      "1:&4 p_{1} A{\\left(t \\right)} - p_{1} \\frac{d}{d t} B{\\left(t \\right)} - 4 p_{3} A{\\left(t \\right)} + p_{3} \\frac{d}{d t} B{\\left(t \\right)} + \\chi_{p_{1}} - \\chi_{p_{3}} + 4 \\frac{d}{d t} A{\\left(t \\right)} - \\frac{d^{2}}{d t^{2}} B{\\left(t \\right)} - \\frac{3 p_{3} u A{\\left(t \\right)}}{V_{p}} - \\frac{3 \\dot{u} A{\\left(t \\right)}}{V_{p}}&=0\\,,\\label{eq:d3_2}\\\\\n",
+      "\\end{align}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define our monomials\n",
+    "monomials = [y,1]\n",
+    "# Allocate memory for our determining equation\n",
+    "d3_sub_eq = []\n",
+    "# Loop over monomials and extract the determining equation\n",
+    "for index,monomial in enumerate(monomials):\n",
+    "    # Make a copy of the linearised symmetry condition\n",
+    "    temp_eq = expand(simplify(d3/Vp))\n",
+    "    # Extract the determining equation depending on what monomial we work with\n",
+    "    if monomial==1 and temp_eq.subs(yt,0)!=0:\n",
+    "        d3_sub_eq.append((monomial,temp_eq.subs(y,0)))\n",
+    "    elif temp_eq.coeff(monomial).subs(y,0)!=0:\n",
+    "        d3_sub_eq.append((monomial,temp_eq.coeff(monomial).subs(y,0)))\n",
+    "# Ok, let's make a fancy LaTeX string which we can use to print the monomials\n",
+    "d3_sub_eq_string = \"\\\\begin{align}\\n\"\n",
+    "for index,eq_temp in enumerate(d3_sub_eq):\n",
+    "    if index<len(det_eq)-1:\n",
+    "        d3_sub_eq_string += latex(eq_temp[0]) + \":&\" + latex(eq_temp[1]) + \"&=0\\,,\\\\label{eq:d3_\" + str(index+1)+ \"}\\\\\\\\\\n\"\n",
+    "    else:\n",
+    "        d3_sub_eq_string += latex(eq_temp[0]) + \":&\" + latex(eq_temp[1]) + \"&=0\\,.\\\\label{eq:d3_\" + str(index+1)+ \"}\\\\\\\\\\n\"\n",
+    "\n",
+    "d3_sub_eq_string += \"\\\\end{align}\"            \n",
+    "d3_sub_eq_string = d3_sub_eq_string.replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:d3}\\n\\\\end{equation}\\n\").replace(\"{\\\\left(p_{1},p_{2},p_{3},p_{4},Vp \\\\right)}\",\"\").replace(\"Vp\",\"V_{p}\").replace(\"p1\",\"p_{1}\").replace(\"p3\",\"p_{3}\")\n",
+    "print(\"The sub equations stemming from the third determining equation are:\")\n",
+    "print(d3_sub_eq_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da075284",
+   "metadata": {},
+   "source": [
+    "The sub equations stemming from the third determining equation are:\n",
+    "\\begin{align}\n",
+    "y:&3 V_{p} p_{4} A{\\left(t \\right)} - 3 p_{1} p_{3} A{\\left(t \\right)} - p_{1} \\frac{d}{d t} A{\\left(t \\right)} + p_{3} \\frac{d}{d t} A{\\left(t \\right)} - \\frac{d^{2}}{d t^{2}} A{\\left(t \\right)}&=0\\,,\\label{eq:d3_1}\\\\\n",
+    "1:&4 p_{1} A{\\left(t \\right)} - p_{1} \\frac{d}{d t} B{\\left(t \\right)} - 4 p_{3} A{\\left(t \\right)} + p_{3} \\frac{d}{d t} B{\\left(t \\right)} + \\chi_{p_{1}} - \\chi_{p_{3}} + 4 \\frac{d}{d t} A{\\left(t \\right)} - \\frac{d^{2}}{d t^{2}} B{\\left(t \\right)} - \\frac{3 p_{3} u A{\\left(t \\right)}}{V_{p}} - \\frac{3 \\dot{u} A{\\left(t \\right)}}{V_{p}}&=0\\,.\\label{eq:d3_2}\\\\\n",
+    "\\end{align}\n",
+    "Now, the first equation we re-write as follows:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\ddot{A}+(p_{1}-p_{3})\\dot{A}+3(p_{1}p_{3}-V_{p}p_{4})A=0\\,.\n",
+    "\\label{eq:d3_1_proper}\n",
+    "\\end{equation}\n",
+    "I mean, this is a single second order ODE that SymPy should be able to solve?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1fda583c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The solution for A is given by:\n",
+      "\\begin{equation}\n",
+      "A{\\left(t \\right)} = C_{1} e^{\\frac{t \\left(- p_{1} + p_{3} - \\sqrt{12 V_{p} p_{4} + p_{1}^{2} - 14 p_{1} p_{3} + p_{3}^{2}}\\right)}{2}} + C_{2} e^{\\frac{t \\left(- p_{1} + p_{3} + \\sqrt{12 V_{p} p_{4} + p_{1}^{2} - 14 p_{1} p_{3} + p_{3}^{2}}\\right)}{2}}\\,.\\label{eq:A_sol}\n",
+      "\\end{equation}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solve the first equation for A\n",
+    "A_sol = dsolve(d3_sub_eq[0][1], A)\n",
+    "# Allocate two arbitryar integration constants\n",
+    "C1, C2 = symbols('C1 C2')\n",
+    "# Print it in a nice LaTeXy way\n",
+    "A_sol_string = latex(A_sol,mode='equation').replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:A_sol}\\n\\\\end{equation}\\n\").replace(\"{\\\\left(p_{1},p_{2},p_{3},p_{4},Vp \\\\right)}\",\"\").replace(\"Vp\",\"V_{p}\").replace(\"p1\",\"p_{1}\").replace(\"p3\",\"p_{3}\")\n",
+    "# Print the solution for A\n",
+    "print(\"The solution for A is given by:\")\n",
+    "print(A_sol_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dac27ac",
+   "metadata": {},
+   "source": [
+    "The solution for A is given by:\n",
+    "\\begin{equation}\n",
+    "A{\\left(t \\right)} = C_{1} e^{\\frac{t \\left(- p_{1} + p_{3} - \\sqrt{12 V_{p} p_{4} + p_{1}^{2} - 14 p_{1} p_{3} + p_{3}^{2}}\\right)}{2}} + C_{2} e^{\\frac{t \\left(- p_{1} + p_{3} + \\sqrt{12 V_{p} p_{4} + p_{1}^{2} - 14 p_{1} p_{3} + p_{3}^{2}}\\right)}{2}}\\,.\\label{eq:A_sol}\n",
+    "\\end{equation}\n",
+    "I mean, look at that complexity! There is just no way we are going to be able to keep A. The same probably goes for B as well, so we might as well set that to zero as well. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13356098",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
