Add our lovely notebook

--- a/Code/symmetries_Glucose_Insulin_signalling.ipynb
+++ b/Code/symmetries_Glucose_Insulin_signalling.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f8d77235",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "06b59bc2",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "76e04023",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "b2953759",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "53b6371b",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "ce191e5a",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
     }
    ],
    "source": [
-    "# Extract the second determining equation\n",
+    "# Extract the third determining equation\n",
     "d3 = expand(simplify(det_eq[2][1].subs(xi,xi_sol).subs(eta,eta_sol).doit()*(1/Vp)))\n",
     "# Print this in a lovely LaTex string \n",
     "d3_string = latex(Eq(d3,0),mode='equation').replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:d3}\\n\\\\end{equation}\\n\").replace(\"{\\\\left(p_{1},p_{2},p_{3},p_{4},Vp \\\\right)}\",\"\").replace(\"Vp\",\"V_{p}\").replace(\"p1\",\"p_{1}\").replace(\"p3\",\"p_{3}\")\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "01cd8a97",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
       "The sub equations stemming from the third determining equation are:\n",
       "\\begin{align}\n",
       "y:&3 V_{p} p_{4} A{\\left(t \\right)} - 3 p_{1} p_{3} A{\\left(t \\right)} - p_{1} \\frac{d}{d t} A{\\left(t \\right)} + p_{3} \\frac{d}{d t} A{\\left(t \\right)} - \\frac{d^{2}}{d t^{2}} A{\\left(t \\right)}&=0\\,,\\label{eq:d3_1}\\\\\n",
-      "1:&4 p_{1} A{\\left(t \\right)} - p_{1} \\frac{d}{d t} B{\\left(t \\right)} - 4 p_{3} A{\\left(t \\right)} + p_{3} \\frac{d}{d t} B{\\left(t \\right)} + \\chi_{p_{1}} - \\chi_{p_{3}} + 4 \\frac{d}{d t} A{\\left(t \\right)} - \\frac{d^{2}}{d t^{2}} B{\\left(t \\right)} - \\frac{3 p_{3} u A{\\left(t \\right)}}{V_{p}} - \\frac{3 \\dot{u} A{\\left(t \\right)}}{V_{p}}&=0\\,,\\label{eq:d3_2}\\\\\n",
+      "1:&4 p_{1} A{\\left(t \\right)} - p_{1} \\frac{d}{d t} B{\\left(t \\right)} - 4 p_{3} A{\\left(t \\right)} + p_{3} \\frac{d}{d t} B{\\left(t \\right)} + \\chi_{p_{1}} - \\chi_{p_{3}} + 4 \\frac{d}{d t} A{\\left(t \\right)} - \\frac{d^{2}}{d t^{2}} B{\\left(t \\right)} - \\frac{3 p_{3} u A{\\left(t \\right)}}{V_{p}} - \\frac{3 \\dot{u} A{\\left(t \\right)}}{V_{p}}&=0\\,.\\label{eq:d3_2}\\\\\n",
       "\\end{align}\n"
      ]
     }
@@ -394,14 +394,14 @@
     "    # Make a copy of the linearised symmetry condition\n",
     "    temp_eq = expand(simplify(d3/Vp))\n",
     "    # Extract the determining equation depending on what monomial we work with\n",
-    "    if monomial==1 and temp_eq.subs(yt,0)!=0:\n",
+    "    if monomial==1 and temp_eq.subs(y,0)!=0:\n",
     "        d3_sub_eq.append((monomial,temp_eq.subs(y,0)))\n",
     "    elif temp_eq.coeff(monomial).subs(y,0)!=0:\n",
     "        d3_sub_eq.append((monomial,temp_eq.coeff(monomial).subs(y,0)))\n",
     "# Ok, let's make a fancy LaTeX string which we can use to print the monomials\n",
     "d3_sub_eq_string = \"\\\\begin{align}\\n\"\n",
     "for index,eq_temp in enumerate(d3_sub_eq):\n",
-    "    if index<len(det_eq)-1:\n",
+    "    if index<len(d3_sub_eq)-1:\n",
     "        d3_sub_eq_string += latex(eq_temp[0]) + \":&\" + latex(eq_temp[1]) + \"&=0\\,,\\\\label{eq:d3_\" + str(index+1)+ \"}\\\\\\\\\\n\"\n",
     "    else:\n",
     "        d3_sub_eq_string += latex(eq_temp[0]) + \":&\" + latex(eq_temp[1]) + \"&=0\\,.\\\\label{eq:d3_\" + str(index+1)+ \"}\\\\\\\\\\n\"\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "1fda583c",
    "metadata": {},
    "outputs": [
@@ -470,13 +470,174 @@
     "\\begin{equation}\n",
     "A{\\left(t \\right)} = C_{1} e^{\\frac{t \\left(- p_{1} + p_{3} - \\sqrt{12 V_{p} p_{4} + p_{1}^{2} - 14 p_{1} p_{3} + p_{3}^{2}}\\right)}{2}} + C_{2} e^{\\frac{t \\left(- p_{1} + p_{3} + \\sqrt{12 V_{p} p_{4} + p_{1}^{2} - 14 p_{1} p_{3} + p_{3}^{2}}\\right)}{2}}\\,.\\label{eq:A_sol}\n",
     "\\end{equation}\n",
-    "I mean, look at that complexity! There is just no way we are going to be able to keep A. The same probably goes for B as well, so we might as well set that to zero as well. "
+    "I mean, look at that complexity! There is just no way we are going to be able to keep A. The same probably goes for B as well, so we might as well set that to zero as well. Also, for a really complicated insignal $u(t)$ we should have $A=0$. So let's just substitute this into our second equation. Also, we see that in order to have a solution for all plausible values of $B$, it is best to assume that \n",
+    "\\begin{equation}\n",
+    "\\chi_{p_{1}}=\\chi_{p_{3}}\\,.\n",
+    "\\label{eq:parameter_symmetries_1}\n",
+    "\\end{equation}\n",
+    "This, is definitely true if $B=0$ at least. So let's just assume that $A=B=0$ which means that we are left with the following symmetries: \n",
+    "\\begin{align}\n",
+    "\\xi{(t,y)}&=B(t)\\,,\\label{eq:xi_general_d3}\\\\\n",
+    "\\eta{(t,y)}&=C(t)y+D(t)\\,.\\label{eq:eta_general_d3}\\\\\n",
+    "\\end{align}\n",
+    "Well, maybe we solve for $B(t)$ anyways. We have:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "13356098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The solution for B is given by:\n",
+      "\\begin{equation}\n",
+      "B{\\left(t \\right)} = C_{1} + C_{2} e^{t \\left(- p_{1} + p_{3}\\right)}\\,.\\label{eq:B_sol}\n",
+      "\\end{equation}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solve the first equation for A\n",
+    "B_sol = dsolve(d3_sub_eq[1][1].subs(A,0).subs(chi_p1,chi_p3), B)\n",
+    "# Allocate two arbitryar integration constants\n",
+    "C1, C2 = symbols('C1 C2')\n",
+    "# Print it in a nice LaTeXy way\n",
+    "B_sol_string = latex(B_sol,mode='equation').replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:B_sol}\\n\\\\end{equation}\\n\").replace(\"{\\\\left(p_{1},p_{2},p_{3},p_{4},Vp \\\\right)}\",\"\").replace(\"Vp\",\"V_{p}\").replace(\"p1\",\"p_{1}\").replace(\"p3\",\"p_{3}\")\n",
+    "# Print the solution for A\n",
+    "print(\"The solution for B is given by:\")\n",
+    "print(B_sol_string)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The solution for B is given by:\n",
+    "\\begin{equation}\n",
+    "B{\\left(t \\right)} = C_{1} + C_{2} e^{t \\left(- p_{1} + p_{3}\\right)}\\,.\\label{eq:B_sol}\n",
+    "\\end{equation}\n",
+    "This means that our infinitesimals are given by:\n",
+    "\\begin{align}\n",
+    "\\xi{(t,y)}&=C_{1} + C_{2} e^{t \\left(- p_{1} + p_{3}\\right)}\\,,\\label{eq:xi_general_d3}\\\\\n",
+    "\\eta{(t,y)}&=C(t)y+D(t)\\,.\\label{eq:eta_general_d3}\\\\\n",
+    "\\end{align}\n",
+    "Let's substitute these expressions into the fourth determining equation in order to see where that gets us.\n",
+    "# Fourth determining equation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fourth determining equation is given by:\n",
+      "\\begin{equation}\n",
+      "- 2 V_{p}^{3} p_{4} y C{\\left(t \\right)} + 2 V_{p}^{3} p_{4} y \\frac{d}{d t} B{\\left(t \\right)} - V_{p}^{3} p_{4} D{\\left(t \\right)} - V_{p}^{3} y \\chi_{p4} + 2 V_{p}^{2} p_{1} p_{3} y C{\\left(t \\right)} - 2 V_{p}^{2} p_{1} p_{3} y \\frac{d}{d t} B{\\left(t \\right)} + V_{p}^{2} p_{1} p_{3} D{\\left(t \\right)} + V_{p}^{2} p_{1} y \\chi_{p_{3}} - V_{p}^{2} p_{1} y \\frac{d}{d t} C{\\left(t \\right)} - V_{p}^{2} p_{1} \\frac{d}{d t} D{\\left(t \\right)} + V_{p}^{2} p_{3} y \\chi_{p_{3}} + V_{p}^{2} p_{3} y \\frac{d}{d t} C{\\left(t \\right)} + V_{p}^{2} p_{3} \\frac{d}{d t} D{\\left(t \\right)} - V_{p}^{2} p_{4} y \\chi_{V_{p}} + V_{p}^{2} y \\frac{d^{2}}{d t^{2}} C{\\left(t \\right)} + V_{p}^{2} \\frac{d^{2}}{d t^{2}} D{\\left(t \\right)} + V_{p} p_{3} u C{\\left(t \\right)} - 2 V_{p} p_{3} u \\frac{d}{d t} B{\\left(t \\right)} + V_{p} p_{3} u + V_{p} u \\chi_{p_{3}} + V_{p} \\dot{u} C{\\left(t \\right)} - 2 V_{p} \\dot{u} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} \\dot{u} - p_{3} u \\chi_{V_{p}} - \\dot{u} \\chi_{V_{p}} = 0\\,.\\label{eq:d4}\n",
+      "\\end{equation}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Update solutions \n",
+    "A_sol = 0\n",
+    "xi_sol = xi_sol.subs(A,0)\n",
+    "eta_sol = eta_sol.subs(A,0)\n",
+    "# Extract the fourth determining equation\n",
+    "d4 = expand(simplify(det_eq[3][1].subs(xi,xi_sol).subs(eta,eta_sol).subs(chi_p1,chi_p3).doit()))\n",
+    "# Print this in a lovely LaTex string \n",
+    "d4_string = latex(Eq(d4,0),mode='equation').replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:d4}\\n\\\\end{equation}\\n\").replace(\"{\\\\left(p_{1},p_{2},p_{3},p_{4},Vp \\\\right)}\",\"\").replace(\"Vp\",\"V_{p}\").replace(\"p1\",\"p_{1}\").replace(\"p3\",\"p_{3}\")\n",
+    "print(\"The fourth determining equation is given by:\")\n",
+    "print(d4_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The fourth determining equation is given by:\n",
+    "\\begin{equation}\n",
+    "- 2 V_{p}^{3} p_{4} y C{\\left(t \\right)} + 2 V_{p}^{3} p_{4} y \\frac{d}{d t} B{\\left(t \\right)} - V_{p}^{3} p_{4} D{\\left(t \\right)} - V_{p}^{3} y \\chi_{p4} + 2 V_{p}^{2} p_{1} p_{3} y C{\\left(t \\right)} - 2 V_{p}^{2} p_{1} p_{3} y \\frac{d}{d t} B{\\left(t \\right)} + V_{p}^{2} p_{1} p_{3} D{\\left(t \\right)} + V_{p}^{2} p_{1} y \\chi_{p_{3}} - V_{p}^{2} p_{1} y \\frac{d}{d t} C{\\left(t \\right)} - V_{p}^{2} p_{1} \\frac{d}{d t} D{\\left(t \\right)} + V_{p}^{2} p_{3} y \\chi_{p_{3}} + V_{p}^{2} p_{3} y \\frac{d}{d t} C{\\left(t \\right)} + V_{p}^{2} p_{3} \\frac{d}{d t} D{\\left(t \\right)} - V_{p}^{2} p_{4} y \\chi_{V_{p}} + V_{p}^{2} y \\frac{d^{2}}{d t^{2}} C{\\left(t \\right)} + V_{p}^{2} \\frac{d^{2}}{d t^{2}} D{\\left(t \\right)} + V_{p} p_{3} u C{\\left(t \\right)} - 2 V_{p} p_{3} u \\frac{d}{d t} B{\\left(t \\right)} + V_{p} p_{3} u + V_{p} u \\chi_{p_{3}} + V_{p} \\dot{u} C{\\left(t \\right)} - 2 V_{p} \\dot{u} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} \\dot{u} - p_{3} u \\chi_{V_{p}} - \\dot{u} \\chi_{V_{p}} = 0\\,.\\label{eq:d4}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "Ok, let's split this up with respect to $\\{1,y\\}$ to begin with..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sub equations stemming from the fourth determining equation are:\n",
+      "\\begin{align}\n",
+      "y:&- 2 V_{p}^{3} p_{4} C{\\left(t \\right)} + 2 V_{p}^{3} p_{4} \\frac{d}{d t} B{\\left(t \\right)} - V_{p}^{3} \\chi_{p4} + 2 V_{p}^{2} p_{1} p_{3} C{\\left(t \\right)} - 2 V_{p}^{2} p_{1} p_{3} \\frac{d}{d t} B{\\left(t \\right)} + V_{p}^{2} p_{1} \\chi_{p_{3}} - V_{p}^{2} p_{1} \\frac{d}{d t} C{\\left(t \\right)} + V_{p}^{2} p_{3} \\chi_{p_{3}} + V_{p}^{2} p_{3} \\frac{d}{d t} C{\\left(t \\right)} - V_{p}^{2} p_{4} \\chi_{V_{p}} + V_{p}^{2} \\frac{d^{2}}{d t^{2}} C{\\left(t \\right)}&=0\\,,\\label{eq:d4_1}\\\\\n",
+      "1:&- V_{p}^{3} p_{4} D{\\left(t \\right)} + V_{p}^{2} p_{1} p_{3} D{\\left(t \\right)} - V_{p}^{2} p_{1} \\frac{d}{d t} D{\\left(t \\right)} + V_{p}^{2} p_{3} \\frac{d}{d t} D{\\left(t \\right)} + V_{p}^{2} \\frac{d^{2}}{d t^{2}} D{\\left(t \\right)}&=0\\,,\\label{eq:d4_2}\\\\\n",
+      "u:&V_{p} p_{3} C{\\left(t \\right)} - 2 V_{p} p_{3} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} p_{3} + V_{p} \\chi_{p_{3}} - p_{3} \\chi_{V_{p}}&=0\\,,\\label{eq:d4_3}\\\\\n",
+      "\\dot{u}:&V_{p} C{\\left(t \\right)} - 2 V_{p} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} - \\chi_{V_{p}}&=0\\,.\\label{eq:d4_4}\\\\\n",
+      "\\end{align}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define our monomials\n",
+    "monomials = [y,1,u,udot]\n",
+    "# Allocate memory for our determining equation\n",
+    "d4_sub_eq = []\n",
+    "# Loop over monomials and extract the determining equation\n",
+    "for index,monomial in enumerate(monomials):\n",
+    "    # Make a copy of the linearised symmetry condition\n",
+    "    temp_eq = expand(simplify(d4))\n",
+    "    # Extract the determining equation depending on what monomial we work with\n",
+    "    if monomial==1 and temp_eq.subs(y,0).subs(u,0).subs(udot,0)!=0:\n",
+    "        d4_sub_eq.append((monomial,temp_eq.subs(y,0).subs(u,0).subs(udot,0)))\n",
+    "    elif temp_eq.coeff(monomial).subs(y,0).subs(u,0).subs(udot,0)!=0:\n",
+    "        d4_sub_eq.append((monomial,temp_eq.coeff(monomial).subs(y,0).subs(u,0).subs(udot,0)))\n",
+    "# Ok, let's make a fancy LaTeX string which we can use to print the monomials\n",
+    "d4_sub_eq_string = \"\\\\begin{align}\\n\"\n",
+    "for index,eq_temp in enumerate(d4_sub_eq):\n",
+    "    if index<len(d4_sub_eq)-1:\n",
+    "        d4_sub_eq_string += latex(eq_temp[0]) + \":&\" + latex(eq_temp[1]) + \"&=0\\,,\\\\label{eq:d4_\" + str(index+1)+ \"}\\\\\\\\\\n\"\n",
+    "    else:\n",
+    "        d4_sub_eq_string += latex(eq_temp[0]) + \":&\" + latex(eq_temp[1]) + \"&=0\\,.\\\\label{eq:d4_\" + str(index+1)+ \"}\\\\\\\\\\n\"\n",
+    "\n",
+    "d4_sub_eq_string += \"\\\\end{align}\"            \n",
+    "d4_sub_eq_string = d4_sub_eq_string.replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:d3}\\n\\\\end{equation}\\n\").replace(\"{\\\\left(p_{1},p_{2},p_{3},p_{4},Vp \\\\right)}\",\"\").replace(\"Vp\",\"V_{p}\").replace(\"p1\",\"p_{1}\").replace(\"p3\",\"p_{3}\")\n",
+    "print(\"The sub equations stemming from the fourth determining equation are:\")\n",
+    "print(d4_sub_eq_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sub equations stemming from the fourth determining equation are:\n",
+    "\\begin{align}\n",
+    "y:&- 2 V_{p}^{3} p_{4} C{\\left(t \\right)} + 2 V_{p}^{3} p_{4} \\frac{d}{d t} B{\\left(t \\right)} - V_{p}^{3} \\chi_{p4} + 2 V_{p}^{2} p_{1} p_{3} C{\\left(t \\right)} - 2 V_{p}^{2} p_{1} p_{3} \\frac{d}{d t} B{\\left(t \\right)} + V_{p}^{2} p_{1} \\chi_{p_{3}} - V_{p}^{2} p_{1} \\frac{d}{d t} C{\\left(t \\right)} + V_{p}^{2} p_{3} \\chi_{p_{3}} + V_{p}^{2} p_{3} \\frac{d}{d t} C{\\left(t \\right)} - V_{p}^{2} p_{4} \\chi_{V_{p}} + V_{p}^{2} \\frac{d^{2}}{d t^{2}} C{\\left(t \\right)}&=0\\,,\\label{eq:d4_1}\\\\\n",
+    "1:&- V_{p}^{3} p_{4} D{\\left(t \\right)} + V_{p}^{2} p_{1} p_{3} D{\\left(t \\right)} - V_{p}^{2} p_{1} \\frac{d}{d t} D{\\left(t \\right)} + V_{p}^{2} p_{3} \\frac{d}{d t} D{\\left(t \\right)} + V_{p}^{2} \\frac{d^{2}}{d t^{2}} D{\\left(t \\right)}&=0\\,,\\label{eq:d4_2}\\\\\n",
+    "u:&V_{p} p_{3} C{\\left(t \\right)} - 2 V_{p} p_{3} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} p_{3} + V_{p} \\chi_{p_{3}} - p_{3} \\chi_{V_{p}}&=0\\,,\\label{eq:d4_3}\\\\\n",
+    "\\dot{u}:&V_{p} C{\\left(t \\right)} - 2 V_{p} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} - \\chi_{V_{p}}&=0\\,.\\label{eq:d4_4}\\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13356098",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -484,7 +645,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -498,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
