--- a/Code/symmetries_Glucose_Insulin_signalling.ipynb
+++ b/Code/symmetries_Glucose_Insulin_signalling.ipynb
@@ -11,7 +11,7 @@
     "We consider the following model of glucose signalling:\n",
     "\\begin{equation}\n",
     "\\begin{split}\n",
-    "\\dot{q_{1}}&=u(t)-p_{1}q_{1}-p_{2}g_{2}\\,,\\\\\n",
+    "\\dot{q_{1}}&=u(t)-p_{1}q_{1}-p_{2}q_{2}\\,,\\\\\n",
     "\\dot{q_{2}}&=p_{3}q_{1}+p_{4}q_{2}\\,.\\\\\n",
     "\\end{split}\n",
     "\\label{eq:glucose_system}\n",
@@ -23,7 +23,7 @@
     "\\end{equation}\n",
     "which means that we observe a fraction of the glucose in the blood. In [1] they find some Lie symmetries of this sytem using an ansatz based approach. In this work, we will try to find these Lie symmetries without resorting to any ansatze. Since this is a system of two first order ODE, this implies that the symmetry group is infinite. To this end, we re-write this system as a single second order ODE. First, we can multiply the first ODE in the above equation by $1/V_{p}$ in order to replace the state $q_{1}$ by $y$. Then, we can re-write the entire system as a single second order ODE which yields the following equation:\n",
     "\\begin{equation}\n",
-    "\\ddot{y}=\\phi\\left(\\theta,y,\\dot{y}\\right)=(p_{1}-p_{3})\\dot{y}+(p_{1}p_{3}-p_{4}V_{p})y+\\left(\\frac{1}{V_{p}}\\right)(p_{3}u+\\dot{u})\\,.\n",
+    "\\ddot{y}=\\phi\\left(t,\\theta,y,\\dot{y}\\right)=(p_{1}+p_{3})\\dot{y}-(p_{1}p_{3}+p_{2}p_{4})y+\\left(\\frac{1}{V_{p}}\\right)(\\dot{u}-p_{3}u)\\,,\n",
     "\\label{eq:glucose_second}\n",
     "\\end{equation}\n",
     "We are interested in the symmetries of this second order ODE as the symmetry group is finite. Specifically, we are interested in a symmetry:\n",
@@ -49,7 +49,7 @@
     "    \\end{align}\n",
     "Then, the linearised symmetry condition is given by:\n",
     "\\begin{equation}\n",
-    "\\eta^{(2)}=(p_{1}-p_{3})\\eta^{(1)}+(p_{1}p_{3}-p_{4}V_{p})\\eta+\\sum_{i=1}^{4}\\left(\\frac{\\partial\\phi_{i}}{\\partial p_{i}}\\right)\\chi_{i}+\\left(\\frac{\\partial\\phi}{\\partial V_{p}}\\right)\\chi_{V_{p}}=0\\,\\mathrm{whenever}\\quad\\ddot{y}=\\phi\\left(\\theta,y,\\dot{y}\\right)=(p_{1}-p_{3})\\dot{y}+(p_{1}p_{3}-p_{4}V_{p})y+\\left(\\frac{1}{V_{p}}\\right)(p_{3}u+\\dot{u})\\,.\n",
+    "\\eta^{(2)}=\\frac{1}{V_{p}}(\\ddot{u}-p_{3}\\dot{u})\\xi+(p_{1}+p_{3})\\eta^{(1)}-(p_{1}p_{3}+p_{2}p_{4})\\eta+\\sum_{i=1}^{4}\\left(\\frac{\\partial\\phi_{i}}{\\partial p_{i}}\\right)\\chi_{i}+\\left(\\frac{\\partial\\phi}{\\partial V_{p}}\\right)\\chi_{V_{p}}=0\\,\\mathrm{whenever}\\quad\\ddot{y}=(p_{1}+p_{3})\\dot{y}-(p_{1}p_{3}+p_{2}p_{4})y+\\left(\\frac{1}{V_{p}}\\right)(\\dot{u}-p_{3}u)\\,.\n",
     "\\label{eq:lin_sym_glucose}\n",
     "\\end{equation}\n",
     "This will decompose into a set of determining equations stemming from the different powers of $\\dot{q}$ which gives us a system of equations that we can hopefully solve. Now, it's quite time consuming to do all these tasks by hand, so let's try to let SymPy do it instead! \n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f8d77235",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "06b59bc2",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "76e04023",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b2953759",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "53b6371b",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ce191e5a",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "01cd8a97",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1fda583c",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "13356098",
    "metadata": {},
    "outputs": [
@@ -515,6 +515,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9a8936c",
    "metadata": {},
    "source": [
     "The solution for B is given by:\n",
@@ -532,7 +533,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "id": "a550f65d",
    "metadata": {},
    "outputs": [
     {
@@ -562,6 +564,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a55c47df",
    "metadata": {},
    "source": [
     "The fourth determining equation is given by:\n",
@@ -575,7 +578,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
+   "id": "6e8b6962",
    "metadata": {},
    "outputs": [
     {
@@ -622,6 +626,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d96cb88",
    "metadata": {},
    "source": [
     "The sub equations stemming from the fourth determining equation are:\n",
@@ -631,13 +636,104 @@
     "u:&V_{p} p_{3} C{\\left(t \\right)} - 2 V_{p} p_{3} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} p_{3} + V_{p} \\chi_{p_{3}} - p_{3} \\chi_{V_{p}}&=0\\,,\\label{eq:d4_3}\\\\\n",
     "\\dot{u}:&V_{p} C{\\left(t \\right)} - 2 V_{p} \\frac{d}{d t} B{\\left(t \\right)} + V_{p} - \\chi_{V_{p}}&=0\\,.\\label{eq:d4_4}\\\\\n",
     "\\end{align}\n",
+    "This is rather quite interesting is it not? If we begin with the assumption that $u(t)$ is not a constant, i.e. $\\dot{u}\\neq 0$, then it follows from the last two equations that $\\chi_{p_{3}}=0$. From our previous determining equation, i.e. determining equation 3, it follows that $\\chi_{p_{1}}=0$ since $\\chi_{p_{1}}=-\\chi_{p_{3}}$. Hence in this case both $p_{1}$ and $p_{3}$ will be identifiable. \n",
+    "\n",
+    "Also, from the very last equation, a good choice is to pick: \n",
+    "\\begin{equation}\n",
+    "\\chi_{V_{p}}=V_{p}\\,.\n",
+    "\\label{eq:chi_Vp}\n",
+    "\\end{equation}\n",
+    "In this case, it follows from the third equation that\n",
+    "\\begin{equation}\n",
+    "C{(t)}=2\\dot{B}\\,.\n",
+    "\\label{eq:C_and_B}\n",
+    "\\end{equation}\n",
+    "Since $D$ only occurs in the second equation, and since it is separated from all other equations, we might as well just ignore it. To this end, we move on to the first equation. We know from before that the interesting choice of $B$ is given by:\n",
+    "\\begin{equation}\n",
+    "B{(t)}=\\exp((p_{3}-p_{1})t)\\,.\n",
+    "\\label{eq:B_interesting}\n",
+    "\\end{equation}\n",
+    "Let's plug this into the first equation and see what this gives us..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2f075013",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The infinitesimal $\\chi_{p_{4}}$ is given by:\n",
+      "\\begin{equation}\n",
+      "\\chi_{p_{4}} = \\frac{\\left(2 V_{p} p_{1} p_{4} - 2 V_{p} p_{3} p_{4} - V_{p} p_{4} e^{t \\left(p_{1} - p_{3}\\right)} - 4 p_{1}^{3} + 10 p_{1}^{2} p_{3} - 10 p_{1} p_{3}^{2} + 4 p_{3}^{3}\\right) e^{t \\left(- p_{1} + p_{3}\\right)}}{V_{p}}\\,.\\label{eq:chi_p4}\n",
+      "\\end{equation}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define our solution for B\n",
+    "B_sol = exp((p3-p1)*t)\n",
+    "# Define our solution for C\n",
+    "C_sol = 2*Derivative(B_sol,t,1).doit()\n",
+    "# Extract our main equation of interest\n",
+    "d4_main_equation = d4_sub_eq[0][1]\n",
+    "# Substitute all our values \n",
+    "d4_main_equation = simplify(expand(d4_main_equation.subs(B,B_sol).subs(C,C_sol).subs(chi_p1,0).subs(chi_p3,0).subs(chi_Vp,Vp)))\n",
+    "# Solve four our last infinitesimal\n",
+    "chi_p4_sol = Eq(chi_p4,solve(Eq(d4_main_equation,0),chi_p4)[0])\n",
+    "# Make a lovely LaTeX string for this as well. \n",
+    "chi_p4_string = latex(chi_p4_sol,mode='equation').replace(\"\\\\begin{equation}\",\"\\\\begin{equation}\\n\").replace(\"p4\",\"p_{4}\").replace(\"\\\\end{equation}\",\"\\\\,.\\\\label{eq:chi_p4}\\n\\\\end{equation}\\n\").replace(\"{\\\\left(p_{1},p_{2},p_{3},p_{4},Vp \\\\right)}\",\"\").replace(\"Vp\",\"V_{p}\").replace(\"p1\",\"p_{1}\").replace(\"p3\",\"p_{3}\")\n",
+    "print(\"The infinitesimal $\\\\chi_{p_{4}}$ is given by:\")\n",
+    "print(chi_p4_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7857e78",
+   "metadata": {},
+   "source": [
+    "The infinitesimal $\\chi_{p_{4}}$ is given by:\n",
+    "\\begin{equation}\n",
+    "\\chi_{p_{4}} = \\frac{\\left(2 V_{p} p_{1} p_{4} - 2 V_{p} p_{3} p_{4} - V_{p} p_{4} e^{t \\left(p_{1} - p_{3}\\right)} - 4 p_{1}^{3} + 10 p_{1}^{2} p_{3} - 10 p_{1} p_{3}^{2} + 4 p_{3}^{3}\\right) e^{t \\left(- p_{1} + p_{3}\\right)}}{V_{p}}\\,.\\label{eq:chi_p4}\n",
+    "\\end{equation}\n",
+    "Let's simplify this a wee bit. This can be re-written as follows:\n",
     "\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adb5707c",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\chi_{p_{4}} = 2p_{4}(p_{1}-p_{3})\\exp\\left((p_{3}-p_{1})t\\right)+\\frac{2}{V_{p}}\\left(2(p_{3}^{3}-p_{1}^{3})+5p_{1}p_{3}(p_{1}-p_{3})\\right)\\exp\\left((p_{3}-p_{1})t\\right)\\,.\\label{eq:chi_p4}\n",
+    "\\end{equation}\n",
+    "Now, in order for a specific parameter to be identifiable, we require that particular infinitesimal should be zero, i.e. $\\chi=0$. What we conclude in this case is that the unidentifiable parameters are $p_{2},p_{4}$ and $V_{p}$ while the parameters $p_{1}$ and $p_{3}$ are identifiable when the insignal $u(t)$ *is not a constant*, i.e. $\\dot{u}\\neq 0$. \n",
+    "\n",
+    "When the insignal is a constant, the situation is slightly worse because then we have that $\\chi_{p_{1}}=\\chi_{p3}\\neq 0$. What this implies is that our invariant relating to $p_{1}$ and $p_{3}$ are given by the calculation\n",
+    "$$\\frac{\\mathrm{d}p_{3}}{\\mathrm{d}p_{1}}=\\frac{\\chi_{p_{3}}}{\\chi_{p_{1}}}=1\\,,$$\n",
+    "and the first integral is given by \n",
+    "$$r=p_{3}-p_{1}\\,,$$\n",
+    "and hence when $u(t)$ is a constant, i.e. that $\\dot{u}=0$, we get that $p_{1}$ and $p_{3}$ are individually unidentifiable, but the difference $p_{3}-p_{1}$ is identifiable. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5c369d02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ce88ef4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -645,7 +741,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -659,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
