--- a/tex_files_with_output_ODEs/linear_case_3.tex
+++ b/tex_files_with_output_ODEs/linear_case_3.tex
@@ -1,1 +1,1 @@
-$\left(  - a \right) \cdot b \cdot c + b \cdot c \cdot y\left( t \right) \cdot _{1} + b \cdot y\left( t \right) \cdot _{2} + c \cdot y\left( t \right) \cdot _{2} + y\left( t \right) \cdot _{3}$
+$\left(  - a \right) \cdot b \cdot c \cdot k + b \cdot c \cdot y\left( t \right) \cdot _{1} + b \cdot y\left( t \right) \cdot _{2} + c \cdot y\left( t \right) \cdot _{2} + y\left( t \right) \cdot _{3}$
