Added two constants kI and kE

--- a/Code/SEI_symmetry_analysis_document/notes.tex
+++ b/Code/SEI_symmetry_analysis_document/notes.tex
@@ -1,1 +1,1 @@
-ODE for $S$:\begin{equation}\frac{d}{d t} S{\left(t \right)} = - \beta I{\left(t \right)} S{\left(t \right)} + c - \mu_{S} S{\left(t \right)}\end{equation}ODE for $E$:\begin{equation}\frac{d}{d t} E{\left(t \right)} = \beta \left(1 - \epsilon\right) I{\left(t \right)} S{\left(t \right)} - \delta E{\left(t \right)} - \mu_{E} E{\left(t \right)}\end{equation}ODE for $I$:\begin{equation}\frac{d}{d t} I{\left(t \right)} = \beta \epsilon I{\left(t \right)} S{\left(t \right)} + \delta E{\left(t \right)} - \mu_{I} I{\left(t \right)}\end{equation}
+ODE for $S$:\begin{equation}\frac{d}{d t} S{\left(t \right)} = - \beta I{\left(t \right)} S{\left(t \right)} + c - \mu_{S} S{\left(t \right)}\end{equation}ODE for $E$:\begin{equation}\frac{d}{d t} E{\left(t \right)} = \beta \left(1 - \epsilon\right) I{\left(t \right)} S{\left(t \right)} - \delta E{\left(t \right)} - \mu_{E} E{\left(t \right)}\end{equation}ODE for $I$:\begin{equation}\frac{d}{d t} I{\left(t \right)} = \beta \epsilon I{\left(t \right)} S{\left(t \right)} + \delta E{\left(t \right)} - \mu_{I} I{\left(t \right)}\end{equation}ODE for $S$:\begin{equation}\frac{d}{d t} S{\left(t \right)} = - \beta I{\left(t \right)} S{\left(t \right)} + c - \mu_{S} S{\left(t \right)}\end{equation}ODE for $E$:\begin{equation}\frac{d}{d t} E{\left(t \right)} = \beta \left(1 - \epsilon\right) I{\left(t \right)} S{\left(t \right)} - \delta E{\left(t \right)} - \mu_{E} E{\left(t \right)}\end{equation}ODE for $I$:\begin{equation}\frac{d}{d t} I{\left(t \right)} = \beta \epsilon I{\left(t \right)} S{\left(t \right)} + \delta E{\left(t \right)} - \mu_{I} I{\left(t \right)}\end{equation}
